fix: adjust padding and refine dropdown design to align with reference

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -59,7 +59,7 @@
 .categories li {
   position: relative;
 }
-.categories li a {
+.categories li > a {
   border-right: solid 1px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
@@ -68,11 +68,11 @@
   color: inherit;
   padding: 0 50px;
 }
-.categories li a img {
+.categories li > a img {
   width: 40px;
   margin-bottom: 8px;
 }
-.categories li a span {
+.categories li > a span {
   font-size: 14px;
   font-weight: 500;
   text-align: center;
@@ -94,6 +94,11 @@
   min-width: 300px;
   z-index: 10;
 }
+@media (min-width: 768px) {
+  .categories li .dropdown {
+    width: 650px;
+  }
+}
 .categories li .dropdown .category-list {
   flex: 1;
   margin-right: 15px;
@@ -104,27 +109,39 @@
   padding: 0;
 }
 .categories li .dropdown .category-list ul li {
-  margin: 6px 0;
-  display: flex;
-  align-items: center;
+  padding: 10px 0;
   border-bottom: 1px solid #ddd;
+  position: relative;
 }
-.categories li .dropdown .category-list ul li a {
-  font-size: 14px;
+.categories li .dropdown .category-list ul li > a {
+  font-size: 17px;
   color: #333;
   text-decoration: none;
-  padding-right: 8px;
+  display: block;
+  padding: 5px 25px 5px 0;
+  position: relative;
+  border-right: none;
+  white-space: none;
 }
-.categories li .dropdown .category-list ul li a:hover {
+.categories li .dropdown .category-list ul li > a:hover {
   text-decoration: underline;
 }
-.categories li .dropdown .category-list ul li .arrow {
-  font-size: 10px;
+.categories li .dropdown .category-list ul li > a::after {
+  content: ">";
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 12px;
   color: #333;
-  margin-left: 8px;
 }
 .categories li .dropdown .recommendation {
-  flex: 2;
+  flex: none;
+}
+@media (min-width: 768px) {
+  .categories li .dropdown .recommendation {
+    width: 350px;
+  }
 }
 .categories li .dropdown .recommendation .title {
   font-size: 16px;
@@ -142,4 +159,10 @@
 }
 .categories li:hover .dropdown {
   display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .categories li:hover .dropdown {
+    flex-direction: row;
+  }
 }/*# sourceMappingURL=styles.css.map */
