--- a/src/styles/scss/components/_navbar.scss
+++ b/src/styles/scss/components/_navbar.scss
@@ -1,4 +1,4 @@
-@import '../abstracts/variables'; 
+@import '../abstracts/variables';
 
 .navigation-menu {
   margin: auto;
@@ -13,7 +13,7 @@
   li {
     position: relative;
 
-    a {
+    > a {
       border-right: solid 1px rgba(0, 0, 0, 0.08);
       display: flex;
       flex-direction: column;
@@ -51,6 +51,10 @@
       min-width: 300px;
       z-index: 10;
 
+      @media (min-width: 768px) {
+        width: 650px; 
+      }
+
       .category-list {
         flex: 1;
         margin-right: 15px;
@@ -61,35 +65,45 @@
           padding: 0;
 
           li {
-            margin: 6px 0;
-            display: flex;
-            align-items: center;
+            padding: 10px 0;
+            border-bottom: 1px solid #ddd;
+            position: relative;
 
-            a {
-              font-size: 14px;
+            > a {
+              font-size: 17px;
               color: #333;
               text-decoration: none;
-              padding-right: 8px;
+              display: block;
+              padding: 5px 25px 5px 0;
+              position: relative;
+              border-right: none;
+              white-space: none;
 
               &:hover {
                 text-decoration: underline;
               }
-            }
 
-            .arrow {
-              font-size: 10px;
-              color: #333;
-              margin-left: 8px;
+              &::after {
+                content: ">";
+                position: absolute;
+                right: 5px;
+                top: 50%;
+                transform: translateY(-50%);
+                font-size: 12px;
+                color: #333;
+              }
             }
-
-            border-bottom: 1px solid #ddd; 
           }
         }
       }
 
       .recommendation {
-        flex: 2;
+        flex: none;
         
+        @media (min-width: 768px) {
+          width: 350px; 
+        }
+
         .title {
           font-size: 16px;
           font-weight: bold;
@@ -111,6 +125,11 @@
 
     &:hover .dropdown {
       display: flex;
+      flex-direction: column;
+
+      @media (min-width: 768px) {
+        flex-direction: row;
+      }
     }
   }
 }
